# rust-http-server

./: .env  Cargo.toml  test.sh
migrations/: 0001_user_table.sql
src/: main.rs
src/auth/: jwt.rs  middleware.rs
src/communication/: email.rs
src/config/: database.rs
src/handlers/: auth_handler.rs  user_handler.rs
src/models/: user.rs
src/repositories/: user_repository.rs
