[package]
name = "first-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
futures = "0.3.31"
argon2 = "0.5.3"
lettre = "0.11.13"
sendgrid = "0.23.0"
reqwest = "0.12.12"